# nuopc-app-prototypes

AsyncIOProto/: .gitattributes  Makefile  README  atm.F90  esm.F90  esmApp.F90  esmApp.runconfig  input.config  input_2010-06-01T00:00:00_sss.nc  input_2010-06-01T00:30:00_sss.nc  io.F90  ocn.F90
ESMX_GenericIOProto/: Makefile  README.md  esmxBuild.yaml  esmxRun.yaml  esmxRunBasic.yaml  esmxRunInternal.yaml  esmxRunOptions.yaml
ESMX_GenericIOProto/GenATM/: CMakeLists.txt  genatm.F90
ESMX_GenericIOProto/GenIO/: CMakeLists.txt  genio.F90  genio_config.F90  genio_defaults.F90  genio_field.F90  genio_geom.F90  genio_param.F90  genio_params.F90  genio_struct.F90  genio_util.F90
Issue140/: README  atm.F90  config_file  esm.F90
RewindProto/: Makefile  README  atm.F90  driver.F90  esmApp.F90  ocn.F90  runtime.cfg
